--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /node_modules
 /public/node_modules
+.DS_Store
+.idea
+.vagrant
+bootstrap.sh
+VagrantFile
+bower_components/
+node_modules
+package-lock.json
